force-app/main/default/objects/gupshupcrm__CustomException__c/gupshupcrm__CustomException__c.object-meta.xml
<CustomObject>
    <description>Exception Handling Object</description>
    <label>CustomException</label>
    <nameField>
        <label>CustomException Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomExceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>