force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__ClassName__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__ClassName__c</fullName>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>