force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>