force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__Govt_Limit_in_Executing_Code__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Govt_Limit_in_Executing_Code__c</fullName>
    <label>Govt Limit in Executing Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>