force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>