force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__MethodName__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__MethodName__c</fullName>
    <label>MethodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>