force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__Related_To_Number__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Related_To_Number__c</fullName>
    <label>Related To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>