force-app/main/default/objects/gupshupcrm__CustomException__c/fields/gupshupcrm__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>